k8-files/deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashbabbler-app
  labels:
    app: hashbabbler-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hashbabbler-app
  template:
    metadata:
      labels:
        app: hashbabbler-app
        tier: API
    spec:
      containers:
      - name: hashbabbler
        image: howardtingting/hashbabbler
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
