k8-files/svc-nodeport-nodejs.yml
apiVersion: v1
kind: Service
metadata:
  name: hashbabbler-service
spec:
  type: NodePort
  selector:
    app: hashbabbler-app
    tier: API
  ports:
  - protocol: TCP
    name: API-port
    port: 3000 #clusterIP port to which NodePort is routed
    targetPort: 3000 #containerPort exposed by pod (containerPort)
    nodePort: 30001 #port # exposed by NodePort
